server/public/styles.css
/* ... */
.hidden {
  display: none;
}

.none {
  bottom: 5px;
}

a {
  text-decoration: none;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.list-item {
  color: #364e68;
}

.back {
  color: white;
}

a:visited {
  text-decoration: none;
}

.header-nav {
  display: none;
}

.h1-anchor {
  color: white;
  transition: color 0.3s;
}

.location-map {
  height: 200px;
  border: solid #364e68;
  border-radius: 0.4rem;
  margin: 0 auto 10px;
}

.add-header {
  margin-bottom: 0;
}

.auth-form {
  display: flex;
  flex-direction: column;
  background-color: white;
  justify-content: space-between;
  align-items: center;
  width: 80%;
  padding: 10px 20px;
  border: solid 0.15rem #364e68;
  border-radius: 0.4rem;
  color: #364e68;
}

.auth-form-header {
  align-self: baseline;
  margin-bottom: 10px;
}

.auth-input-container {
  margin-bottom: 10px;
  width: 100%;
  flex-direction: column;
  display: flex;
  justify-content: space-between;
  align-items: baseline;
}

.auth-input {
  width: 100%;
  padding: 5px;
  border: solid 0.15rem #364e68;
  border-radius: 0.2rem;
}

.auth-label {
  font-size: 1.1rem;
}

.auth-anchor {
  color: #364e68;
}

.log-in {
  font-size: 1.2rem;
  padding: 3px 1rem;
  border: solid 0.15rem #364e68;
  transition: background-color 0.3s;
  width: 100%;
}

.log-in-row {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.log-in-row > small {
  margin-bottom: 10px;
}

.create,
.add,
.finish,
.save,
.explore {
  border: solid 0.15rem #364e68;
  transition: background-color 0.3s;
}

.dynamic {
  transition: background-color 0.3s;
}

.white {
  background-color: white;
  color: #364e68;
}

@media screen and (min-width: 415px) {
  .map-form {
    width: 100%;
  }

  .name {
    position: relative;
    background-color: transparent;
    color: #364e68;
    font-size: 2.5rem;
    text-align: left;
    outline: none;
    left: 0;
    padding: 1rem 0;
  }

  ::placeholder {
    color: #364e68;
  }

  .page-container {
    width: 95%;
    margin: auto;
  }

  .main {
    width: 100vw;
    height: 550px;
    flex-direction: column-reverse;
  }

  .map-box {
    position: relative;
    width: 100%;
    height: 90%;
  }

  .add,
  .finish {
    position: absolute;
    bottom: 10px;
    width: 60%;
    left: 20%;
    padding: 0.5rem 0.3rem;
    font-size: 1.2rem;
  }

  .save {
    right: 10px;
  }

  .poi-list-container {
    max-height: 160px;
  }

  .poi-list {
    max-height: 130px;
  }

  .trip {
    flex-direction: column;
    justify-content: inherit;
    align-items: baseline;
  }

  .trip-list {
    width: 100%;
    position: relative;
    display: flex;
    flex-wrap: wrap;
    left: 0;
    top: 0;
  }

  .trip-list-item {
    width: 100%;
  }

  .trip-title {
    display: flex;
    align-items: center;
    width: 100%;
  }

  .itinerary-list {
    width: 100%;
  }

  .back {
    position: relative;
    color: #364e68;
    width: 60px;
    align-items: initial;
  }

  .location-page {
    height: 100%;
    padding: 10px 0 0;
  }

  .back-arrow {
    position: relative;
    top: 0;
    transition: transform 0.3s;
  }

  .location {
    position: absolute;
    top: 9px;
  }

  .edit-button {
    background-color: #364e68;
    color: white;
    border-color: #364e68;
    right: 0;
    top: unset;
  }

  .delete:hover,
  .delete-poi:hover {
    background-color: rgb(185, 24, 24);
    border-color: rgb(185, 24, 24);
  }

  .cancel:hover,
  .edit-button:hover {
    background-color: white;
    color: #364e68;
  }

  .header-anchor:hover,
  .h1-anchor:hover {
    color: #69c9ee;
  }

  .create:hover,
  .add:hover,
  .finish:hover,
  .save:hover,
  .poi-search:hover,
  .add-poi:hover,
  .explore:hover,
  .log-in:hover {
    background-color: white;
    color: #364e68;
  }

  .button:hover,
  .location:hover,
  .trip-list-item:hover,
  .poi-search:hover {
    cursor: pointer;
  }

  .init:hover {
    background-color: #364e68;
    color: white;
    cursor: initial;
  }

  .dynamic:hover {
    background-color: #364e68;
  }

  .dynamic:hover a,
  .dynamic:hover i {
    color: white;
  }

  .back-arrow:hover {
    transform: scale(1.15);
  }

  .fs-logo:hover {
    opacity: 0.8;
  }

  .white:hover {
    cursor: initial;
  }

  .edit-button:hover {
    background-color: #364e68;
    color: white;
    cursor: pointer;
  }
}

@media screen and (min-width: 450px) {
  .add,
  .finish {
    width: 50%;
    left: 25%;
  }
}

@media screen and (min-width: 500px) {
  .header-nav {
    display: initial;
  }

  .navbar {
    display: none;
  }

  .search {
    width: 50%;
  }

  .save {
    top: 75px;
    right: 0;
    bottom: unset;
    left: unset;
    width: 15%;
    height: 46px;
  }

  .explore {
    position: absolute;
    right: 17%;
    width: 20%;
    padding: 0;
    height: 46px;
    font-size: 1.2rem;
  }

  .trip-list-item {
    font-size: 1.1rem;
  }
}

@media screen and (min-width: 576px) {
  .page-container {
    width: 80%;
  }

  .add,
  .finish {
    width: 40%;
    left: 30%;
    padding: 0.5rem 0.7rem;
    font-size: 1rem;
  }
}

@media screen and (min-width: 640px) {
  .trip-list-item {
    width: 49%;
    font-size: 1.2rem;
  }

  .trip-list {
    justify-content: space-between;
  }

  .poi-search {
    right: 50%;
    top: 15%;
    height: 46px;
  }

  .search {
    width: 50%;
  }

  .results {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    width: 100%;
    max-height: 60vh;
  }
}
/* ... */

